<resources>
    <string name="app_name">AndroidFundamentals</string>
    <string name="back">Back</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="avengers_end_game_one_line">Avengers: End Game</string>
    <string name="pg_13">13+</string>
    <string name="tags">Action, Adventure, Fantasy</string>
    <string name="preview_tags">Action, Adventure, Drama</string>
    <string name="reviews">125 reviews</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="cast">Cast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="time">137 MIN</string>
</resources>