<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        tools:context=".activities.movie_details.MovieDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/edge_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/edge_margin" />

        <ImageView
            android:id="@+id/bg_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:drawablePadding="8dp"
            android:text="@string/back"
            android:textColor="@color/white_50"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/pg_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/bg_image"
            app:layout_constraintStart_toStartOf="@id/left_guideline" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/bg_image" />

        <TextView
            android:id="@+id/tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tags"
            android:textColor="@color/tag"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageView
            android:id="@+id/first_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/filled_star"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/tags" />

        <ImageView
            android:id="@+id/second_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/filled_star"
            app:layout_constraintStart_toEndOf="@id/first_star"
            app:layout_constraintTop_toTopOf="@id/first_star" />

        <ImageView
            android:id="@+id/third_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/filled_star"
            app:layout_constraintStart_toEndOf="@id/second_star"
            app:layout_constraintTop_toTopOf="@id/first_star" />

        <ImageView
            android:id="@+id/fourth_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/filled_star"
            app:layout_constraintStart_toEndOf="@id/third_star"
            app:layout_constraintTop_toTopOf="@id/first_star" />

        <ImageView
            android:id="@+id/fifth_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/empty_star"
            app:layout_constraintStart_toEndOf="@id/fourth_star"
            app:layout_constraintTop_toTopOf="@id/first_star" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/reviews"
            android:textColor="@color/reviews"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/first_star"
            app:layout_constraintStart_toEndOf="@id/fifth_star"
            app:layout_constraintTop_toTopOf="@id/first_star" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/storyline"
            android:textColor="@color/subtitle"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/first_star" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/storyline_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline_title" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/cast_name"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <ImageView
            android:id="@+id/robert"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/robert"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/evans"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <ImageView
            android:id="@+id/evans"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/evans"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/mark"
            app:layout_constraintStart_toEndOf="@id/robert"
            app:layout_constraintTop_toTopOf="@id/robert" />

        <ImageView
            android:id="@+id/mark"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mark"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/hemsworth"
            app:layout_constraintStart_toEndOf="@id/evans"
            app:layout_constraintTop_toTopOf="@id/robert" />

        <ImageView
            android:id="@+id/hemsworth"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/hemsworth"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/mark"
            app:layout_constraintTop_toTopOf="@id/robert" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/robert"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/robert"
            app:layout_constraintEnd_toEndOf="@id/robert"
            android:text="@string/robert_downey_jr"
            android:textSize="12sp"
            android:textColor="@color/cast_name"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/evans"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/evans"
            app:layout_constraintEnd_toEndOf="@id/evans"
            android:text="@string/chris_evans"
            android:textSize="12sp"
            android:textColor="@color/cast_name"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/mark"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/mark"
            app:layout_constraintEnd_toEndOf="@id/mark"
            android:text="@string/mark_ruffalo"
            android:textSize="12sp"
            android:textColor="@color/cast_name"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/hemsworth"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/hemsworth"
            app:layout_constraintEnd_toEndOf="@id/hemsworth"
            android:text="@string/chris_hemsworth"
            android:textSize="12sp"
            android:textColor="@color/cast_name"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>