<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.movie_list.MoviesListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/edge_margin_large">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edge_margin"
            android:layout_marginTop="@dimen/edge_margin_large"
            android:drawablePadding="8dp"
            android:includeFontPadding="false"
            android:paddingVertical="12dp"
            android:text="@string/movies_list"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_movie_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_preview"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_movie_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="48dp"
                android:src="@drawable/preview" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/preview_gradient"
                app:layout_constraintBottom_toBottomOf="@id/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/image"
                app:layout_constraintTop_toTopOf="@id/image" />

            <TextView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/pg_background"
                android:gravity="center"
                android:text="@string/pg_13"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/preview_tags"
                android:textColor="@color/tag"
                android:textSize="8dp"
                app:layout_constraintBottom_toTopOf="@id/rating_bar"
                app:layout_constraintStart_toStartOf="@id/rating_bar"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/reviews"
                android:textAllCaps="true"
                android:textColor="@color/reviews"
                android:textSize="8dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/rating_bar"
                app:layout_constraintStart_toEndOf="@id/rating_bar"
                app:layout_constraintTop_toTopOf="@id/rating_bar"
                tools:ignore="SpUsage" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/SmallRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:numStars="5"
                android:rating="4"
                android:stepSize="1"
                app:layout_constraintBottom_toBottomOf="@id/image"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/avengers_end_game_one_line"
                android:textColor="@color/subtitle"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/time_color"
                android:textSize="8dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/movie_title"
                app:layout_constraintTop_toBottomOf="@id/movie_title"
                tools:ignore="SpUsage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>